# arp

./: .gitignore  Cargo.toml  README.md  com.github.quiode.arp.gschema.xml  copy_and_compile_settings.sh
design/: arp
resources/: arp.desktop  entry.ui  filepicker.ui  list.ui  list_item.ui  main_page.ui  resources.gresource.xml  start_page.ui  window.ui
resources/components/: filepicker.ui  list_item.ui  text_editor.ui
resources/pages/: main_page.ui  window.ui
scripts/: install_desktop.sh  safe_icon.sh
src/: main.rs  package_manager.rs
src/components/: mod.rs
src/components/entry/: imp.rs  mod.rs
src/components/file_picker/: imp.rs  mod.rs
src/components/list/: imp.rs  mod.rs
src/components/list/list_item/: imp.rs
src/components/text_editor/: imp.rs  mod.rs
src/entry/: imp.rs  mod.rs
src/file_picker/: imp.rs
src/list/: imp.rs  mod.rs
src/list_item/: mod.rs
src/main_page/: imp.rs  mod.rs
src/pages/: mod.rs
src/pages/main_page/: imp.rs
src/pages/start_page/: imp.rs
src/start_page/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
