[package]
name = "arp"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Schwaiger <mail@dominik-schwaiger.ch>"]
description = "GUI Application that let's the user upload packages to the AUR"
readme = "README.md"
repository = "https://github.com/quiode/arp"
license = "MIT"
keywords = ["tool", "aur", "gui"]
categories = ["gui", "development-tools"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.2.0", package = "libadwaita", features = ["v1_2"] }
gtk = { version = "0.5.1", package = "gtk4", features = [] }
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.16.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[build-dependencies]
glib-build-tools = "0.16.0"
